Initial Prototype complete, just waiting on more info

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="styles.css">
 
+        <link rel="icon" href="images/tamu-favicon.png">
+
     </head>
     <body>
         <div class="overlay"></div>
@@ -15,14 +17,14 @@
 
                 <ul class="nav-left">
                     <li><a href="publications.html">Publications</a></li>
-                    <li><a href="about.html">Instrumentation</a></li>
-                    <li><a href="about.html">Modeling</a></li>
+                    <li><a href="research-topics.html">Research Topics</a></li>
+                    <li><a href="modeling.html">Modeling</a></li>
                 </ul>
-                <a class="banner" href="/">HOME</a>
+                <a class="banner" href="/">LINDAHL LAB</a>
                 <ul class="nav-right">
-                    <li><a href="about.html">Members</a></li>
-                    <li><a href="about.html">Positions</a></li>
-                    <li><a href="about.html">Photos</a></li>
+                    <li><a href="members.html">Members</a></li>
+                    <li><a href="positions.html">Positions</a></li>
+                    <li><a href="photos.html">Photos</a></li>
                 </ul>
             </nav>
 
@@ -39,31 +41,33 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="publications.html">Publications</a></li>
-                    <li><a href="about.html">Instrumentation</a></li>
-                    <li><a href="about.html">Modeling</a></li>
-                    <li><a href="about.html">Members</a></li>
-                    <li><a href="about.html">Positions</a></li>
-                    <li><a href="about.html">Photos</a></li>
+                    <li><a href="research-topics.html">Research Topics</a></li>
+                    <li><a href="modeling.html">Modeling</a></li>
+                    <li><a href="members.html">Members</a></li>
+                    <li><a href="positions.html">Positions</a></li>
+                    <li><a href="photos.html">Photos</a></li>
                 </ul>
             </div>
 
         </header>
 
         <main>
+            <div class="note"> Throughout this site, you'll see notes like this describing what needs to be added. Please send me the required information whenever you can, so I can update the page. Once that's done, I'll remove all notes.</div>
+
+            <div class="note">(To self) All pages need to be slightly modified for mobile viewing. All images also need alt text.</div>
+
             <div class="welcome-title">
                 <section>
-                    <h1>Justin Sun</h1>
-                    <ul>
-                        <li>Mathematics Student at Texas A&M University</li>
-                        <li>Applied Mathematics</li>
-                        <li>Mathematical Biochemistry</li>
-                        <li>Machine Learning and Data Science</li>
-                    </ul>
+                    <h1>Welcome to the Lindahl Lab</h1>
+                    <p>Our lab does lots of things in biochemical research. Please give me like a 1 paragraph overview of everything the lab does so I can put it on this page, and then hopefully it will look less empty. I'm going to write about random things now to make this text box look full. If you don't have much to write about I can also make the picture on the side bigger. I can also make this into a list of items if you want. Also please give me a better picture than the one on the right.</p>
+
                 </section>
                 <figure class="welcome-photo-container">
                     <img id="welcome-photo" src="images/bp.jpg">
                 </figure>
             </div>
+
+            <div class="note">The descriptive text and photo above needs to be updated with a proper lab description and photo. I'll also need any links that Paul wants to include, as well as a decision on what to include in the section on the right below.</div>
 
             <div class="PI-overview">
                 <section class="PI-profile">
@@ -88,9 +92,10 @@
                 </section>
             </div>
 
+            <div class="note"> I need to know what research topics to put below, as well as a short 1-2 sentence summary of each topic.</div>
             <div class="research-overview">
                 <h2>Research Topics</h2>
-                <p id="research-overview-general-desc">The Lindahl Lab's research covers a wide range of subjects, with an emphasis on metal models and systems biochemistry.</p>
+                <p id="research-overview-general-desc">The Lindahl Lab's research covers a wide range of subjects, with an emphasis on metal models and systems biochemistry. Please give me more information on what to include here, I'm not even sure if we're currently doing these research topics.</p>
 
                 <ul class="research-overview-grid">
                     <li class="research-overview-item">
@@ -135,6 +140,9 @@
 
             </div>
 
+            <div class="note">I'll need the most recent contact details and what to put in the right corner below. This contact box will be displayed on all pages of the site.</div>
+
+
             <div class="contact">
                 <address class="contact-info">
                     <section>
@@ -159,7 +167,7 @@
                         </p>
                     </section>
                 </address>
-
+                
 
                 <section class="contact-map">
                     <div class="contact-map-placeholder">
