Removed video from index, replaced with generic stick figure

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
                 <section class="PI-video">
                     <p>Put the lab video here, or I can make this into a "news" section or something similar</p>
-                    <video>
-                        <source src="placeholder-video/placeholderlabvideo.mp4" type="video/mp4">
-                    </video>
+                    <figure>
+                        <img src="images/GenericStickFigure.png">
+                    </figure>
                 </section>
             </div>
 
