--- a/members.html
+++ b/members.html
@@ -118,7 +118,7 @@
                     <div class="member-container">
                         <div class="figure-and-links">
                             <figure>
-                                <img src="images/xueyan.jpeg" class="member-pfp">
+                                <img src="images/xueyan.jpg" class="member-pfp">
                             </figure>
                             <a href="index.html">ResearchGate</a>
                             <a href="index.html">Resume</a>
