Quick bugfix, changed "/" to index.html and changed HOME to LINDAHL LAB

--- a/members.html
+++ b/members.html
@@ -34,7 +34,7 @@
                 <button class="nav-toggle" aria-expanded="false">
                     MENU ☰
                 </button>
-                <a class="banner" href="/">HOME</a>
+                <a class="banner" href="index.html">LINDAHL LAB</a>
             </nav>
 
             <div class="nav-mobile">
