--- a/members.html
+++ b/members.html
@@ -21,7 +21,7 @@
                     <li><a href="research-topics.html">Research Topics</a></li>
                     <li><a href="modeling.html">Modeling</a></li>
                 </ul>
-                <a class="banner" href="/">LINDAHL LAB</a>
+                <a class="banner" href="index.html">LINDAHL LAB</a>
                 <ul class="nav-right">
                     <li><a href="members.html">Members</a></li>
                     <li><a href="positions.html">Positions</a></li>
