--- a/modeling.html
+++ b/modeling.html
@@ -33,7 +33,7 @@
                 <button class="nav-toggle" aria-expanded="false">
                     MENU ☰
                 </button>
-                <a class="banner" href="/">LINDAHL LAB</a>
+                <a class="banner" href="index.html">LINDAHL LAB</a>
             </nav>
 
             <div class="nav-mobile">
