Added alexia's updated pfp, made members page more mobile friendly

--- a/members.html
+++ b/members.html
@@ -51,7 +51,7 @@
             </div>
 
         </header>
-        <div id="members-page-title">
+        <div id="generic-page-title">
             <h1>Lindahl Lab Members</h2>
         </div>
         <main>
@@ -80,7 +80,7 @@
                             <a href="index.html">Biosketch</a>
                         </div>
                         <div>
-                        <h3>Paul Lindahl</h3>
+                            <h3>Paul Lindahl</h3>
                             <p class="member-description">
     I was born and raised in Chongqing, China, and moved to the United States at
     age 15. I earned my bachelor’s degree in chemistry from Texas A&amp;M
@@ -97,19 +97,15 @@
                     <div class="member-container">
                         <div class="figure-and-links">
                             <figure>
-                                <img src="images/alexiapfp.jpg" class="member-pfp">
+                                <img src="images/alexiapfp.jepg" class="member-pfp">
                             </figure>
                             <a href="index.html">ResearchGate</a>
                         </div>
                         <div>
                         <h3>Alexia Kreinbrink</h3>
                             <p class="member-description">
-    I was born and raised in Chongqing, China, and moved to the United States at
-    age 15. I earned my bachelor’s degree in chemistry from Texas A&amp;M
-    University in 2022 and joined the Lindahl Lab in 2023. My research focuses
-    on identifying and characterizing non-transferrin-bound iron (NTBI), a toxic
-    form of iron implicated in hereditary hemochromatosis. Outside the lab, I enjoy
-    traveling, shopping, watching anime, and spending time with my family.
+                                Hello, my name is Alexia and I joined this lab because I enjoy killing mice.
+
                             </p>
                         </div>
                 </section>
